[package]
name = "bevy-proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }

[workspace]
resolver = "2"


[profile.env]
inherits = "dev"

[profile.dev]
opt-level = 1

[profile.env.package."*"]
opt-level = 3
